Inclusão de tratamento de erro e melhorias no código